<resources>
    <string name="app_name">Spotify_Group4</string>
    <!--layout_sigin-->
    <string name="titlle_login1">Hàng triệu bài hát.</string>
    <string name="titlle_login2">Miễn phí trên Spotify.</string>
    <string name="sigup">Đăng Ký miễn phí</string>
    <string name="sigin_sdt">Tiếp tục với số điện thoại</string>
    <string name="sigin_google">Tiếp tục bằng Google</string>
    <string name="sigin_facebook">Tiếp tục bằng tài khoản Facebook</string>
    <string name="login">Đăng nhập</string>


    <!-- tạo tài khoản -->
    <string name="details_name">Tên của bạn là gì?</string>
    <string name="detail1">Thông tin này hiển thị trên Hồ sơ Spotify của bạn.</string>
    <string name="detail2">Bằng việc nhấn vào Tạo tài khoản, bạn đồng ý với Điều khoản sử dụng của Spotify.</string>
    <string name="detail3">Điều khoản sử dụng</string>
    <string name="detail4">Để tìm hiểu thêm về cách thức Spotify thu nhập, sử dụng, chia sẻ và bảo vệ dự liệu cá nhân của bạn, vui lòng xem Chính sách quyền riêng tư của Spotify.</string>
    <string name="detail5">Chính sách quyền riêng tư</string>
    <string name="detail6">Tôi không muốn nhận tin nhắn tiếp thị từ Spotify.</string>
    <string name="detail7">Chia sẻ dữ liệu đăng ký của tôi với các nhà cung cấp nội dung của Spotify cho mục đích tiếp thị.</string>
    <string name="register_account">Tạo tài khoản</string>
    <!-- login email -->
    <string name="emailorname">Email hoặc tên người dùng</string>
    <string name="pass">Mật khẩu</string>
    <string name="login_no_pass">Đăng nhập không cần mật khẩu</string>
    <string name="notification_music_chanel_name">Thông báo trình điều khiển nhạc</string>
    <!-- mediaPlayer -->
    <string name="defaultDuration">00:00</string>

    <!-- album-->
    <string name="ten_album">Tuyển tập của QNT</string>
    <string name="ten_ca_si">Osad, low G và Da LAB</string>
    <string name="ID_CHANEL_MUSIC">MUSIC_CHANEL</string>
</resources>