<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="15dp">
    <com.google.android.material.textview.MaterialTextView
        style="@style/textDetail"
        android:text="@string/details_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:background="@drawable/custom_edittext_br"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:maxLines="1"
        android:textColor="@color/white" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/textDetail"
        android:text="@string/detail1"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_margin="10dp"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/textDetail"
        android:text="@string/detail2"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/textDetail"
        android:text="@string/detail3"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/green"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/textDetail"
        android:text="@string/detail4"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/textDetail"
        android:text="@string/detail5"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/green"/>
    <LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:text="@string/detail6"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"/>
        <CheckBox
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            style="@style/MyCheckboxStyle"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:gravity="center|left"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:text="@string/detail7"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"/>
        <CheckBox
            android:gravity="center"
            android:layout_width="0dp"
            style="@style/MyCheckboxStyle"
            android:layout_weight="0.5"
            android:layout_height="match_parent" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        style="@style/button_register_account"
        app:strokeWidth="0dp"
        app:strokeColor="@color/white"
        app:cornerRadius="@dimen/border_raius_button"
        android:backgroundTint="@color/coloredittext1"
        android:text="@string/register_account"/>

</LinearLayout>